[package]
name = "pennsieve"
description = "The offical Pennsieve platform client."
version = "0.3.5"
authors = ["Pennsieve <support@pennsieve.com>"]
homepage = "https://www.pennsieve.com"
# Prevent accidental publishing to crates.io
publish = false
build = "build.rs"
edition = "2018"

[dependencies]
actix = "^0.7"
actix-net = "^0.2"
actix-web = "^0.7"
anymap = "0.12"
pennsieve-rust = { git = "https://github.com/Pennsieve/pennsieve-rust.git", tag = "v0.15.2" }
#pennsieve-rust = { path = "../pennsieve-rust" }
pennsieve_macros = { path = "./macros" }
pennsieve_migrations = { path = "./migrations" }
byteorder = "^1.2"
chrono = "^0.4"
clap = "^2.32"
ctrlc = { version = "^3.1", features = ["termination"] }
dirs = "^1.0"
failure = "^0.1"
failure_derive = "^0.1"
getch = "^0.2"
globset = "^0.4"
walkdir = "^2.2"
indicatif = "^0.11"
itertools = "^0.7"
lazy_static = "^1.1"
log4rs = "^0.8"
log-mdc = "^0.1"
futures = "^0.1"
futures-cpupool = "^0.1"
http = "^0.1"
human-panic = "^1.0"
hyper = "^0.12"
hyper-tls = "^0.3"
log = "^0.4"
net2 = "^0.2"
num_cpus = "^1.9"
pretty-bytes = "^0.2"
prettytable-rs = "^0.8"
protobuf = "^2.6"
#protobuf = "^2.0"
r2d2 = "^0.8"
r2d2_sqlite = "^0.8"
rand = "^0.5"
rusqlite = { version = "^0.16", features = ["functions", "blob", "limits", "chrono", "serde_json", "bundled"] }
reqwest = "^0.9"
rustc_version = "^0.2"
rustyline = "^5.0"
rust-ini = "^0.12"
semver = "^0.9"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
sha2 = "^0.9.2"
time = "^0.1"
timer = "^0.2"
tempfile = "^3.0"
term = "^0.5"
tokio = "^0.1"
tokio-tungstenite = "^0.6"
typemap = "^0.3"
tungstenite = "^0.6"
url = "^1.7"

[build-dependencies]
rustc_version = "^0.2"

[dev-dependencies]
pennsieve_macros = { path = "./macros" }
porthole = "^0.1"
uuid = { version = "0.6", features = ["v4"] }
